Moving to maven and GWT 2.8

--- a/OldClock/src/webapp/WEB-INF/web.xml
+++ b/OldClock/src/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
   
   <!-- Default page to serve -->
   <welcome-file-list>
-    <welcome-file>OldClock.html</welcome-file>
+    <welcome-file>oldclock.html</welcome-file>
   </welcome-file-list>
 
 </web-app>
