--- a/OldClock/.settings/com.google.gdt.eclipse.core.prefs
+++ b/OldClock/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,5 +1,4 @@
-#Fri Mar 25 14:07:05 EDT 2011
 eclipse.preferences.version=1
 jarsExcludedFromWebInfLib=
-warSrcDir=war
+warSrcDir=src/main/webapp
 warSrcDirIsOutput=true
